# capnp-json

./: .exrc  .gitignore  .ycm_extra_conf.py  Cargo.toml  README.md  build.rs  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/capnp-json/: Cargo.toml  LICENSE  README.md  build.rs
crates/capnp-json-test/: Cargo.toml  build.rs  cppcompat.rs
crates/capnp-json/src/: data.rs  decode.rs  encode.rs  lib.rs
src/: data.rs  decode.rs  lib.rs
test/: Cargo.toml  build.rs  cppcompat.rs  json.rs
