[workspace]
resolver = "2"
members = [
  "crates/capnp-json",
  "crates/capnp-json-test",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"
license = "MIT"
authors = ["Ben Jackson <puremourning@gmail.com>"]
repository = "https://github.com/puremourning/capnp-json"

[workspace.dependencies]
capnp = "0.25"
capnpc = "0.25"
capnp-json = { path = "crates/capnp-json" }
