[package]
name = "capnp-json-test"
version = "0.0.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>", "Ben Jackson <puremourning@gmail.com>"  ]
build = "build.rs"
edition = "2021"

[lib]
name = "capnp_json_test"
path = "json.rs"

[build-dependencies]
capnpc.workspace = true

[dependencies]
capnp.workspace = true
capnpc.workspace = true
capnp-json = { path = "../" }

[lints.clippy]
type_complexity = "allow"
extra_unused_type_parameters = "allow"
match_single_binding = "allow"
approx_constant = "allow"
