[package]
name = "capnp-json-test"
build = "build.rs"
publish = false

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "capnp_json_test"
path = "json.rs"

[build-dependencies]
capnpc.workspace = true

[dependencies]
capnp.workspace = true
capnpc.workspace = true
capnp-json.workspace = true

[lints.clippy]
type_complexity = "allow"
extra_unused_type_parameters = "allow"
match_single_binding = "allow"
approx_constant = "allow"
